--- a/resource/opy_v05/mini-cheetah-defaults.yaml
+++ b/resource/opy_v05/mini-cheetah-defaults.yaml
@@ -4,7 +4,7 @@ __collection-name__: robot-parameters
 controller_dt     : 0.002
 control_mode      : 0
 myValue           : 2222
-stand_kd_cartesian: [11,11,11]
+stand_kd_cartesian: [11, 11, 11]
 stand_kp_cartesian: [700, 700, 150]
 # stand_kd_cartesian: [2.5,2.5,2.5]
 # stand_kp_cartesian: [50, 50, 50]
