--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@ cmake_minimum_required(VERSION 3.3)
 #find_package(cmake_modules REQUIRED)
 
 project(Legged-Software)
-
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}-O3 -no-pie -ggdb -w")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__NO_COPYRIGHT__ -Wno-error")
 add_subdirectory(${PROJECT_SOURCE_DIR}/third-party/qpOASES)
 add_subdirectory(${PROJECT_SOURCE_DIR}/third-party/ParamHandler)
 add_subdirectory(${PROJECT_SOURCE_DIR}/third-party/inih)
