enable lcm in development

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,31 @@
 # include_directories("./")
-cmake_minimum_required(VERSION 3.3)
+cmake_minimum_required(VERSION 3.6)
 #find_package(cmake_modules REQUIRED)
 
 project(Legged-Software)
+
+#MACOS specific
+if(APPLE)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__APPLE__")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__MACOSX__")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__MACOSX__")
+    find_package(glfw3 REQUIRED)
+    find_package(GLEW REQUIRED)
+    find_package(Curses REQUIRED)
+    find_package(tinyxml2 REQUIRED)
+    find_package(Threads REQUIRED)
+    find_package(lcm REQUIRED)
+    find_package(mujoco CONFIG REQUIRED)
+    set(CMAKE_PREFIX_PATH "${CMAKE_PREFIX_PATH};/usr/local")
+
+    include_directories("/opt/homebrew/include")   # lcm includes
+    
+    set(CMAKE_CXX_STANDARD 17)
+
+
+
+# include_directories("./third-party/lcm/")   # lcm includes
+endif()
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}-O3 -no-pie -ggdb -w")
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__NO_COPYRIGHT__ -Wno-error")
 add_subdirectory(${PROJECT_SOURCE_DIR}/third-party/qpOASES)
@@ -31,14 +54,11 @@ include_directories("./third-party/GoldFarb_Optimizer")
 include_directories("./third-party/ParamHandler")
 include_directories("./third-party/JCQP")
 include_directories("./third-party/JCQP/amd/include")
-include_directories("./third-party/mujoco/include")
 
 include_directories("/usr/local/include")   # lcm includes
 
 include_directories("/usr/include/lcm/")   # lcm includes
 include_directories("./lcm_types/cpp")
-
-
 include_directories(${CMAKE_BINARY_DIR})
 include_directories(${PROJECT_SOURCE_DIR})
 
@@ -79,7 +99,6 @@ file(GLOB_RECURSE sources
 
 
 
-
 )
 
 add_compile_definitions(MANUAL)
@@ -93,5 +112,5 @@ CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake
 
 add_executable(legged_sim ${sources})
 
-target_link_libraries(legged_sim glog lcm mujoco glfw qpOASES JCQP osqp GLEW  ${CURSES_LIBRARIES} glog gflags tinyxml2 ${TinyXML_LIBRARIES})
+target_link_libraries(legged_sim lcm  glfw qpOASES JCQP osqp GLEW::GLEW  ${CURSES_LIBRARIES} mujoco tinyxml2::tinyxml2 ${TinyXML_LIBRARIES})
 
