--- a/resource/opy_v05/mc-mit-ctrl-user-parameters.yaml
+++ b/resource/opy_v05/mc-mit-ctrl-user-parameters.yaml
@@ -17,8 +17,8 @@ Kp_joint          : [35,35, 40]
 #Kd_joint          : [1.5, 1.5, 1.5]
 #Kp_joint          : [15, 15, 15]
 
-Kp_body           : [170, 170, 170]
-Kd_body           : [22, 22, 22]
+Kp_body           : [100, 100, 200]
+Kd_body           : [10, 10,0]
 
 Kp_foot           : [100, 100, 100]
 Kd_foot           : [10, 10, 10]
